# Robezy

./: .gitignore  API_DOCUMENTATION.md  README.md  WEB_AGENT_README.md  package.json
.github/workflows/: release.yml
src/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/resources/: CommandListener.rbxmx  LogListener.rbxmx  WorkspaceListener.rbxmx
src-tauri/src/: fs_manager.rs  main.rs  plugin_manager.rs  server_http.rs  server_ws.rs  watcher.rs
src-tauri/src/robezy/: fs.rs  mod.rs  server.rs  session.rs
