[package]
name = "robezy"
version = "1.0.7"
description = "RoBezy Professional Studio Connector"
authors = ["Antigravity"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1", features = [] }
reqwest = { version = "0.11", default-features = false, features = ["blocking", "json", "rustls-tls"] }
zip = "0.6"
target-lexicon = "0.12"
anyhow = "1.0"
serde_json = "1.0"

[dependencies]
tauri = { version = "1", features = [ "shell-sidecar", "system-tray", "shell-open", "devtools", "process-command-api", "dialog"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
warp = "0.3"
notify = "6.0"
open = "5.0"
futures = "0.3"
futures-util = "0.3"
tokio-tungstenite = "0.20"
dirs = "5.0"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }

uuid = { version = "1.4", features = ["v4"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
